添加-fPIC编译选项

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ SYSCFLAGS=
 SYSLDFLAGS=
 SYSLIBS=
 
-MYCFLAGS=-I/mnt/share/build/include
+MYCFLAGS=-I/mnt/share/build/include -fPIC
 MYLDFLAGS=-L/mnt/share/build/lib
 MYLIBS=
 MYOBJS=
